# varys

./: .gitignore  README.md  example_config.json  setup.cfg
.conda/: meta.yaml
.github/workflows/: pypi-publish.yml  pytest.yml
.rabbitmq/: rabbitmq.conf
tests/: test_varys.py
varys/: __init__.py  consumer.py  controller.py  process.py  producer.py  utils.py
