[metadata]
name = varys
version = file: version.txt
author = Sam Wilkinson
author_email = s.a.j.wilkinson@bham.ac.uk
description = A pika-based python RabbitMQ client for use in the CLIMB-tree project
long_description = file: README.md
license_files =  LICENSE.txt
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pika>=1.3.0
    setuptools>=42